Update: fix 100vh on safari

--- a/src/index.less
+++ b/src/index.less
@@ -3,6 +3,10 @@
 @import (css)
   url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
 
+:root {
+  --app-height: 100px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,6 +14,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  width: 100vw;
+  height: 100vh;
+  height: var(--app-height);
 }
 
 code {
